# mxlib

./: CMakeLists.txt
ao/analysis/: clGainOpt.hpp  fourierTemporalPSD.hpp  speckleAmpPSD.hpp
app/inih/: ini.c
improc/: HCIobservation.hpp  KLIPreduction.hpp  imageFilters.hpp  imageTransforms.hpp  imageXCorrDiscrete.hpp  imageXCorrFFT.hpp
include/: mxlib.hpp  mxlib_uncomp_version.h
include/ao/analysis/: aoSystem.hpp  fourierTemporalPSD.hpp  varmapToImage.hpp
include/ipc/: ompLoopWatcher.hpp
include/math/: vectorUtils.hpp
include/sigproc/: autocorrelation.hpp  psdFilter.hpp
ioutils/fits/: fitsUtils.hpp
math/fft/: fft.hpp
math/fit/: fitGaussian.hpp
math/func/: gaussian.hpp
sigproc/: psdUtils.hpp  zernike.hpp
source/: mxlib.cpp
source/app/: ini.cpp
source/ioutils/fits/: fitsHeaderCard.cpp
source/ipc/: sharedMemSegment.cpp
source/math/fft/: fftwTemplates.cpp
source/math/plot/: gnuPlot.cpp
